refactor :  1.优化了数据库的连接  2.优化了用户接口  3.添加了mongo的连接

--- a/docker-build/dev_setup.yml
+++ b/docker-build/dev_setup.yml
@@ -43,4 +43,16 @@ services:
     restart: always
 
 
+  mongo:
+    image: mongo:latest
+    container_name: mongo
+    ports:
+      - "18006:27017"
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=blog_server
+      - MONGO_INITDB_ROOT_PASSWORD=blog_server123
+    volumes:
+      - ../pkg/data/mongo:/data/db
+    restart: always
+
 
