--- a/docker-build/dev_setup.yml
+++ b/docker-build/dev_setup.yml
@@ -1,5 +1,3 @@
-version: '3'
-
 services:
   mariadb:
     image: 'mariadb:latest'
@@ -56,3 +54,18 @@ services:
     restart: always
 
 
+#  nginx:
+#    image: nginx:latest
+#    ports:
+#      - "18007:80"  # HTTPS 端口
+#    networks:
+#      - mols_network
+#    volumes:
+#      - ../pkg/configs/nginx/nginx.conf:/etc/nginx/nginx.conf  # 挂载 Nginx 配置文件
+#      - ../pkg/configs/nginx/certs:/etc/nginx/certs            # 挂载 SSL 证书
+#    restart:  always
+
+
+#networks:
+#  mols_network:
+#    external: true    # 使用已创建的外部网络
