--- a/pkg/configs/nginx/nginx.conf
+++ b/pkg/configs/nginx/nginx.conf
@@ -20,13 +20,13 @@ http {
         server_name mols.com;  # 替换为你的域名
 
         # SSL证书和私钥路径
-        ssl_certificate /etc/nginx/ssl/mols.com+4.pem;
-        ssl_certificate_key /etc/nginx/ssl/mols.com+4-key.pem;
+        ssl_certificate /etc/nginx/certs/blog_server.pem;
+        ssl_certificate_key /etc/nginx/certs/blog_server-key.pem;
         ssl_protocols TLSv1.2 TLSv1.3;  # 支持的TLS版本
         ssl_ciphers HIGH:!aNULL:!MD5;
 
         location / {
-            proxy_pass http://127.0.0.1:18005;  # 转发请求到外部服务器
+            proxy_pass http://blog_server:18005;  # 转发请求到外部服务器
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
