--- a/docker-build/dev_setup.yml
+++ b/docker-build/dev_setup.yml
@@ -1,3 +1,5 @@
+name: test.mols.site
+
 services:
   mariadb:
     image: mariadb:11
@@ -29,8 +31,6 @@ services:
     environment:
       MINIO_ACCESS_KEY: blog_server
       MINIO_SECRET_KEY: blog_server123
-      MINIO_SERVER_URL: https://api.marisa.site  # 设置服务器的 URL，使用 HTTPS
-      MINIO_DOMAIN: api.marisa.site  # 配置自定义域名
     volumes:
       - minio-data:/data  # 使用命名卷持久化 MinIO 数据
       - ../pkg/configs/minio/:/root/.minio
