--- a/pkg/configs/nginx/nginx.conf
+++ b/pkg/configs/nginx/nginx.conf
@@ -7,7 +7,7 @@ events {
 http {
     server {
         listen 443 ssl;
-        server_name api.marisa.site;
+        server_name api.mols.site;
         client_max_body_size 0;
 
         gzip on;  # 启用 gzip 压缩
@@ -21,7 +21,7 @@ http {
         ssl_ciphers HIGH:!aNULL:!MD5;
 
         location / {
-            add_header Access-Control-Allow-Origin "http://127.0.0.1:5173" always;
+            add_header Access-Control-Allow-Origin "http://127.0.0.1:4173" always;
             # 允许的请求方法
             add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE,PATCH" always;
             # 允许的请求头
